fix footer items' mobile spacing

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -21,3 +21,9 @@ footer {
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 900px) {
+  footer {
+    justify-content: space-around;
+  }
+}
